--- a/css/contact.css
+++ b/css/contact.css
@@ -192,7 +192,6 @@ color: rgb(193, 179, 179);
   text-decoration: none;
 }
 
-/* Social Media Icons */
  .social-media-list {
   position: relative;
   font-size: 22px;
@@ -218,12 +217,13 @@ color: rgb(193, 179, 179);
   line-height: 60px;
   border-radius: 50%;
   color: #fff;
-  background-color: rgb(27,27,27);
+  /* background-color:rgb(94, 242, 252); */
+  border: 2px solid white;
   cursor: pointer; 
   transition: all .2s ease-in-out;
 }
 
-.social-media-list li:after {
+/* .social-media-list li:after {
   content: '';
   position: absolute;
   top: 0;
@@ -235,21 +235,17 @@ color: rgb(193, 179, 179);
   opacity: 0;
   box-shadow: 0 0 0 1px #fff;
   transition: all .2s ease-in-out;
-}
+} */
 
-.social-media-list li:hover {
+/* .social-media-list li:hover {
   background-color: #fff; 
-}
+} */
 
-.social-media-list li:hover:after {
+/* .social-media-list li:hover:after {
   opacity: 1;  
   transform: scale(1.12);
   transition-timing-function: cubic-bezier(0.37,0.74,0.15,1.65);
-} 
-
-/* .social-media-list li:hover a {
-  color: #000;
-} */ */
+}  */
 
 .copyright {
   font: 200 14px 'Oswald', sans-serif;
